refactoring: Reworked template response matching logic: Was: 1) Matching is a map where key is a MessageType. 2) Matching executed using only one field. 3) Result of matching calculated based on MessageType. Unable to set several cases for the same MessageType and several fields in one case. Now: 1) Matching described with instances of class ResponseMapper - one ResponseMapper for each response case. 2) ResponseMapper.matchingFields contain map of ResponseMapper.FieldPath(path to expected field) and ResponseMapper.ValueMatcher(value of field that described in FieldPath. Possible operations: EQUAL,NOT_EQUAL,IN,NOT_IN,MORE,LESS and it's easy to add more.) 3) Result of matching now provided by CheckRule.getResponseStatus Now user can declare action status more flexible: e.g. if ExecType of ExecutionReport is 8(rejected) then place order is failed, or if ExecType is 0 or F then place is passed.